Added DVC tracking for files with no outs

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,11 +1,13 @@
-/modified_raw_data.csv
 /preprocessed_current_data.csv
 /test_X.csv
 /test_y.csv
-/onehot_name_dictionary.json
+#/onehot_name_dictionary.json
 /preprocessed_reference_data.csv
-/flask_dictionary.json
-
-
-raw_current_data.csv
+#/flask_dictionary.json
+/raw_current_data.csv
 /raw_reference_data.csv
+/merged_data.csv
+/preprocessed_current_data_with_predictions.csv
+/flask_dictionary.json
+/onehot_name_dictionary.json
+/test_data.csv
