--- a/dvc.yaml
+++ b/dvc.yaml
@@ -27,10 +27,9 @@ stages:
     params:
       - preprocess
     outs:
-      - ${preprocess.data_folder}/${preprocess.output_file}:
-          cache: false  # Don't store in DVC cache
-    # - ${preprocess.data_folder}/${preprocess.flask_dict_file}
-    # - ${preprocess.data_folder}/${preprocess.onehot_name_dictionary_file}
+      - ${preprocess.data_folder}/${preprocess.output_file}
+      # - ${preprocess.data_folder}/${preprocess.flask_dict_file}
+      # - ${preprocess.data_folder}/${preprocess.onehot_name_dictionary_file}
 
 
   evidentlyai:
@@ -38,11 +37,12 @@ stages:
     deps:
     - ${evidentlyai_script_file}
     - ${evidentlyai.data_folder}/${evidentlyai.reference_data_file}
+    - ${evidentlyai.data_folder}/${evidentlyai.reference_data_file}
     - ${evidentlyai.data_folder}/${evidentlyai.current_data_file}
     params:
     - evidentlyai
-    # outs:
-    # - ${evidentlyai.evidently_htmls_folder_name}
+    outs:
+    - ${evidentlyai.evidently_htmls_folder_name}
 
 
   merge_data:
@@ -54,8 +54,7 @@ stages:
     params:
     - merge_data
     outs:
-    - ${merge_data.data_folder}/${merge_data.merged_data_file}:
-          cache: false  # Don't store in DVC cache
+    - ${merge_data.data_folder}/${merge_data.merged_data_file}
 
 
   train:
@@ -66,10 +65,8 @@ stages:
     params:
     - train 
     outs:
-    - ${train.data_folder}/${train.test_X_file}:
-        cache: false  # Don't store in DVC cache
-    - ${train.data_folder}/${train.test_y_file}:
-        cache: false  # Don't store in DVC cache
+    - ${train.data_folder}/${train.test_X_file}
+    - ${train.data_folder}/${train.test_y_file}
     - ${train.new_model_file_path}
 
 
@@ -92,9 +89,7 @@ stages:
     params:
     - upload_predictions
     outs:
-    - ${upload_predictions.data_folder}/${upload_predictions.preprocessed_current_data_with_predictions_file}:
-          cache: false  # Don't store in DVC cache
-
+    - ${upload_predictions.data_folder}/${upload_predictions.preprocessed_current_data_with_predictions_file}
 
   cleanup:
     cmd: python ${cleanup_script_file}
