--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -20,8 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip          
+          pip install dvc[s3] 
+      # pip install -r requirements.txt    
 
       # - name: Decode Google Credentials
       #   run: |
@@ -40,7 +41,17 @@ jobs:
           echo "EVIDENTLY_TOKEN=${{ secrets.EVIDENTLY_TOKEN }}" >> .env
           echo "MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}" >> .env        
 
-      - name: Run Python script to test pipeline
+      - name: Set up DVC remote with DagsHub credentials
         run: |
-          dvc repro
+          dvc remote add -d myremote https://dagshub.com/<your-username>/<your-repo>.dvc
+          dvc remote modify myremote --local auth basic
+          dvc remote modify myremote --local user ${{ secrets.DAGSHUB_USER_NAME }}
+          dvc remote modify myremote --local password ${{ secrets.DAGSHUB_PASSWORD }}
+
+      - name: Pull all data from DVC remote (DagsHub)
+        run: dvc pull data/flask_dictionary.json
+
+      # - name: Run Python script to test pipeline
+      #   run: |
+      #     dvc repro
 
