--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -21,8 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip          
-          pip install dvc[s3] 
-      # pip install -r requirements.txt    
+          pip install -r requirements.txt    
 
       # - name: Decode Google Credentials
       #   run: |
@@ -49,9 +48,14 @@ jobs:
           dvc remote modify myremote --local password ${{ secrets.DAGSHUB_PASSWORD }}
 
       - name: Pull all data from DVC remote (DagsHub)
-        run: dvc pull data/flask_dictionary.json
+        run: |
+          dvc pull data/raw_reference_data.csv
+          dvc pull data/preprocessed_reference_data.csv 
+          dvc pull data/test_data.csv 
+          dvc pull data/flask_dictionary.json 
+          dvc pull ddata/onehot_name_dictionary.json 
 
-      # - name: Run Python script to test pipeline
-      #   run: |
-      #     dvc repro
+      - name: Run Python script to test pipeline
+        run: |
+          dvc repro
 
