Added needs in ci_cd.yaml

--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
 
-  test-pipeline:
+  test_pipeline:
 
     runs-on: ubuntu-latest
     
@@ -54,6 +54,8 @@ jobs:
 
 
   retrain:
+
+    needs: test_pipeline
 
     runs-on: ubuntu-latest
 
@@ -106,13 +108,15 @@ jobs:
       - name: Downlaod new (current) data, if any
         run: |
           python3 src/download_current_data.py
-          
+
       - name: Run the entire pipeline
         run: |          
           dvc repro --force
 
 
   deploy:
+    
+    needs: retrain
 
     runs-on: ubuntu-latest
 
