--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -1,4 +1,4 @@
-name: Test the DVC pipeilne
+name: Test and Deploy Pipeline
 
 on:
   push:
@@ -6,19 +6,18 @@ on:
       - main
   pull_request:
   schedule:
-    - cron: "*/10 * * * *"  # Retraining runs every 10 mins
+    - cron: "*/10 * * * *"  # Retraining runs every 10 minutes
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
-
   test_pipeline:
-
     runs-on: ubuntu-latest
-    
+    needs: retrain  # Ensure test_pipeline runs after retrain completes
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -26,8 +25,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip          
-          pip install -r requirements.txt    
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Set other environment variables
         run: |
@@ -35,7 +34,7 @@ jobs:
           echo "DAGSHUB_USER_NAME=${{ secrets.DAGSHUB_USER_NAME }}" >> .env
           echo "EVIDENTLY_PROJECT_ID=${{ secrets.EVIDENTLY_PROJECT_ID }}" >> .env
           echo "EVIDENTLY_TOKEN=${{ secrets.EVIDENTLY_TOKEN }}" >> .env
-          echo "MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}" >> .env        
+          echo "MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}" >> .env
 
       - name: Set up DVC remote with DagsHub credentials
         run: |
@@ -49,16 +48,14 @@ jobs:
           dvc pull data/flask_dictionary.json
           dvc pull data/onehot_name_dictionary.json
           dvc pull data/raw_reference_data.csv
-          dvc pull data/preprocessed_reference_data.csv 
-          dvc pull data/test_data.csv 
+          dvc pull data/preprocessed_reference_data.csv
+          dvc pull data/test_data.csv
 
       - name: Run Python script to test pipeline
         run: |
           pytest src/test_pipeline.py --maxfail=1
 
-
   retrain:
-
     if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '[retrain]')
 
     runs-on: ubuntu-latest
@@ -66,7 +63,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -74,8 +71,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip          
-          pip install -r requirements.txt    
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Decode Google Credentials
         run: |
@@ -92,7 +89,7 @@ jobs:
           echo "DAGSHUB_USER_NAME=${{ secrets.DAGSHUB_USER_NAME }}" >> .env
           echo "EVIDENTLY_PROJECT_ID=${{ secrets.EVIDENTLY_PROJECT_ID }}" >> .env
           echo "EVIDENTLY_TOKEN=${{ secrets.EVIDENTLY_TOKEN }}" >> .env
-          echo "MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}" >> .env        
+          echo "MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}" >> .env
 
       - name: Set up DVC remote with DagsHub credentials
         run: |
@@ -106,10 +103,10 @@ jobs:
           dvc pull data/flask_dictionary.json
           dvc pull data/onehot_name_dictionary.json
           dvc pull data/raw_reference_data.csv
-          dvc pull data/preprocessed_reference_data.csv 
-          dvc pull data/test_data.csv 
+          dvc pull data/preprocessed_reference_data.csv
+          dvc pull data/test_data.csv
 
-      - name: Downlaod new (current) data, if any
+      - name: Download new (current) data, if any
         run: |
           python3 src/download_current_data.py
 
@@ -117,9 +114,7 @@ jobs:
         run: |          
           dvc repro --force
 
-
   deploy:
-    
     needs: [test_pipeline, retrain]  # This job depends on pytest and retrain jobs to succeed
 
     if: success()                    # Ensures deploy only runs if test_pipeline and retrain jobs are successful
@@ -129,7 +124,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -137,13 +132,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip          
+          python -m pip install --upgrade pip
           pip install python-dotenv huggingface_hub pyyaml
 
       - name: Set DagsHub environment variables
         run: |
           echo "DAGSHUB_PASSWORD=${{ secrets.DAGSHUB_PASSWORD }}" >> .env
-          echo "DAGSHUB_USER_NAME=${{ secrets.DAGSHUB_USER_NAME }}" >> .env     
+          echo "DAGSHUB_USER_NAME=${{ secrets.DAGSHUB_USER_NAME }}" >> .env
 
       - name: Set up DVC remote with DagsHub credentials
         run: |
@@ -155,11 +150,11 @@ jobs:
       - name: Pull all data from DVC remote (DagsHub)
         run: |
           dvc pull models/
-            
+
       - name: Set Hugging Face environment variable(s)
         run: |
           echo "HF_GITHUB_ACTIONS_TOKEN=${{ secrets.HF_GITHUB_ACTIONS_TOKEN }}" >> .env
 
       - name: Upload the retrained model to HF
         run: |
-          python3 src/hugging_face_push.py  
+          python3 src/hugging_face_push.py
