--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -12,7 +12,6 @@ on:
 jobs:
   test_pipeline:
     runs-on: ubuntu-latest
-    needs: retrain  # Ensure test_pipeline runs after retrain completes
 
     steps:
       - name: Checkout repository
@@ -56,8 +55,10 @@ jobs:
           pytest src/test_pipeline.py --maxfail=1
 
   retrain:
-    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '[retrain]')
 
+    needs: [test_pipeline]  # This job depends on test_pipeline jobs to succeed
+
+    if: success()           # Ensures retraining only runs if test_pipeline is successful
     runs-on: ubuntu-latest
 
     steps:
@@ -115,7 +116,7 @@ jobs:
           dvc repro --force
 
   deploy:
-    needs: [test_pipeline, retrain]  # This job depends on pytest and retrain jobs to succeed
+    needs: [test_pipeline, retrain]  # This job depends on test_pipeline and retrain jobs to succeed
 
     if: success()                    # Ensures deploy only runs if test_pipeline and retrain jobs are successful
 
