--- a/params.yaml
+++ b/params.yaml
@@ -62,9 +62,9 @@ train:
   test_y_file: &test_y_file "test_y.csv"             
   random_state: 42
   cross_validations: 3
-  max_depth:  [1, 2, 1] #[1, 4, 1]                                   # Hyperparameter ranges for the grid search
-  min_samples_split: [4, 5, 4]  #[4, 13, 4] 
-  n_estimators: [20, 21, 10] #[20, 61, 10]
+  max_depth:  [1, 4, 1]                                   # Hyperparameter ranges for the grid search
+  min_samples_split: [4, 13, 4] 
+  n_estimators: [20, 61, 10]
   learning_rate: [0.8, 1.3, 0.2]
   new_model_file_path: &new_model_file_path "models/new_model.pkl"     # The full path of the best training model
   evidently_htmls_folder_name: *evidently_htmls_folder_name
